Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.5.2: October 28, 2009

* touch vdb root on vdb modification as a way to notify alternative PMs
  that their cache needs updating.  Gentoo bug #290428.  Just leaves paludis
  to join in on the fun...

* portage 2.2 modified make.globals to add a default, non glep23 compliant
  ACCEPT_LICENSE.  pkgcore's implementation has been modified to be non
  compliant to glep23, matching portage semantics.

  If pquery <atom> has suddenly started returning nothing, this was the cause.

* fix a traceback that could occur when doing pmerge -pv for when binpkg
  repos were involved.


pkgcore 0.5.1: October 22, 2009

* correct a python-2.6 incompatibility that rears it's head when doing
  repository operations (installing, uninstalling, etc).


pkgcore 0.5: October 22, 2009

* add protection against multiple python versions, w/ the default python
  invocation being a different major version from what pkgcore was installed
  under.  Primarily a fix to dohtml.

* ticket 230; tweaks for better >=python2.5 compatibility.

* pkgcore will now try to sync overlays if the overlay is a vcs.  This can
  be disabled by adding FEATURES="-autodetect-sync" to your make.conf

* pkgcore.sync.base.AutodetectSyncer was added as a way to pull configuration
  from existing on disk vcs repos, and generate a syncer from them.

* handle cache corruption a bit better- namely, log the warning, and keep
  going.  Degradation of performance can result, but it's preferable to just
  bailing.

* gentoo bug 280766; basically some ebuilds are sensitive to a trailing '/'
  on WORKDIR (portage strips it) leading to failures in path sedding.

* comply with PMS corner cases for package names; gentoo bug 263787

* serialization support for cpv derivatives.  Not great, but packages.g.o
  relies on it, thus it's inclusion.
